# wiki

./: .gitignore  .license-selection.json  LICENSE  NOTICE  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/assets/: style.css
docs/assets/data/: atklabv2_all.json  atklabv2_jeopardy.json  atklabv2_single.json
docs/attack-defense/: index.md  timeline.md
docs/attack-defense/cursed/: flag-exchange.md  flag-farming.md  flagexchange.md  flagteams.md  index.md  mirroring.md  team-inflation.md  teaminflation.md  traffic-mirroring.md
docs/attack-defense/game-design/: attack-info.md  checker-hold.md  recovery-period.md  validity-period.md
docs/attack-defense/hosting/: index.md  monitoring.md  routing.md
docs/attack-defense/playing/: defending.md  exploiting.md  index.md  monitoring.md  strategy.md  vulnbox.md
docs/attack-defense/scoring/: aggregated.md  atklabv1.md  atklabv2.md  ecsc2023.md  ecsc2024.md  ecsc2025.md  enowars2024.md  faust2024.md  index.md  saarctf2024.md  tenets.md
docs/attack-defense/service-design/: index.md  pitfalls.md  tenets.md
docs/events/: cwte2025.md  ecsc2025.md
meta/: atklabv2.py
overrides/: base.html
overrides/partials/: logo.html
