[project]
name = "wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.8",
    "mkdocs-git-latest-changes-plugin>=0.0.22",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-glightbox>=0.5.1",
    "mkdocs-charts-plugin>=0.0.13",
]
